# SCOPE_ICD_Supplementary

./: README.md
Algorithm_Repositories/SCOPE/LRF/: Comparison_PostProcessing.m  PostProcessing_single.m  sMooth.m
Algorithm_Repositories/SCOPE/SCOPE-camera/: README.md
Algorithm_Repositories/SCOPE/flood-master/: .gitignore  CMakeLists.txt  README.md  app.json
Algorithm_Repositories/SCOPE/flood-master/opengl/src/: render.cpp  render.h
Algorithm_Repositories/SCOPE/flood-master/src/: CMakeLists.sublime-workspace  CMakeLists.txt  check.txt  cluster.cpp  cluster.h  flood.cpp  flood.h  icp.c  icp.h  image.cpp  image.h  kd_tree.c  kd_tree.h  main.cpp  quaternion.h  stl.c  stl.h  test  test.cpp  vec_math.h
Algorithm_Repositories/SCOPE/flood-master/svd/: CMakeLists.txt  svdcmp.c  svdcmp.h
Algorithm_Repositories/TESTING/: RotaryEncoder_SCOPE.ino  RotaryEncoder_TARGET.ino  StepperMotor_Computations.m  Testing_LRF.py  Winch_Motor_Driver.ino  plotEncoderData.m
Hardware_Files/: Parts_Budget.xlsx  ~$Parts_Budget.xlsx
Hardware_Files/CART_CAD/: 16oz. Red Solo Cup.SLDPRT  1Tube.SLDPRT  2191.sldprt  2464K340_ALUMINUM HELICAL FLEXIBLE SHAFT COUPLING.SLDPRT  2464K360_ALUMINUM HELICAL FLEXIBLE SHAFT COUPLING.SLDPRT  25_2387.sldasm  2751_1.sldasm  2tube.SLDPRT  3076T310_TIE-DOWN RING.SLDPRT  3_connector.SLDPRT  3_corner.SLDPRT  3d_extend.SLDPRT  425oz stepper motor.SLDPRT  4881K214_THK-WALL DARK GRAY PVC UNTHRD PIPE FITTING.SLDPRT  4_prong.SLDPRT  5912K640_OIL-EMBEDDED MOUNTED SLEEVE BEARING.SLDPRT  5913K610_LOW-PROFILE MOUNTED BALL BRNG.SLDPRT  6245K490_ZINC V-BELT PULLEY.SLDPRT  Autonics-E40HB8P-C.SLDPRT  Autonics-E40HB8P-C_BRACKET.SLDPRT  Full_Sat.SLDASM  IKEA BLANDA BLANK SERVING BOWL.SLDPRT  Nema 23_Steel Mounting.SLDPRT  Sat_print.SLDPRT  _25_2387_b_2.sldprt  _M6x1_0_12_s_4.sldprt  bar1.SLDPRT  bar2.SLDPRT  bottom.SLDPRT  box.SLDPRT  bushing.SLDPRT  corner.SLDPRT  cup.SLDPRT  down.SLDPRT  end.SLDPRT  end_piece.SLDPRT  foot.SLDPRT  force_analysis.SLDASM  gear_attach.SLDASM  gear_attach2.SLDASM  (+23 more)
Hardware_Files/SCOPE_CAD/: Aut819F.SLDPRT  Automatic_rotation.SLDASM  Autonics-E50S8-CS.SLDPRT  DFK_72AUC02_F.SLDPRT  M8 X 1.25 mm Bolt.SLDPRT  Metric - Spur gear 1.375M 10T 20PA 6FW ---S10N75H50L5N.sldprt  Metric - Spur gear 1.375M 90T 20PA 10FW ---S90O75H50L110N.sldprt  Mount.SLDPRT  Mount_plate.SLDPRT  Part1.SLDPRT  Rock64.SLDPRT  SKF 625.SLDASM  SM-S2309S.SLDPRT  adapt.SLDPRT  adjust.SLDPRT  arm2.SLDPRT  arm_bottom.SLDPRT  arm_left.SLDPRT  arm_right.SLDPRT  back.SLDDRW  back.SLDPRT  ball.SLDPRT  base.SLDPRT  big_servo.SLDPRT  bottom.SLDPRT  cap.SLDPRT  encoder.SLDPRT  encoder2.SLDPRT  encoder_spacer.SLDPRT  encoder_spacer.STL  flash_lidar_03D303.SLDPRT  foot.SLDPRT  foot_full.SLDASM  gear_2.SLDASM  gear_2.SLDPRT  gear_attach2.SLDASM  gear_print_1.SLDPRT  gear_print_1.SLDPRT.SLDASM  gear_print_1.STL  gear_print_2.SLDPRT  (+26 more)
(+4 files in other folders)
